--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "kanban-board",
   "version": "1.0.0",
   "description": "This is a assignment project for Dealintent, Backend Developer Job Profile",
-  "main": "index.js",
+  "main": "src/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "start": "npm run build && node dist/app.js"
   },
   "author": "Utkarsh Sharma",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.8.11",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.8.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.7.1",
     "@types/node": "^20.5.7",
