--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Utkarsh Sharma",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.201",
     "body-parser": "^1.20.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^5.8.11",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.8.0",
@@ -23,8 +25,8 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.7.1",
     "@types/node": "^20.5.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
